[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/fz_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://map/bonfire.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/FZLTHJW.TTF"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="ButtonGroup" id=3]
resource_name = "skill"

[node name="Bonfire" type="PopupDialog"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 20.0
custom_fonts/font = SubResource( 2 )
text = "勇士们生起了篝火"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_right = -40.0
custom_fonts/font = ExtResource( 1 )
text = "火把-2，压抑-1，生命值恢复20%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_right = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Intro"]
margin_right = 360.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "选择你要使用的技能："
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Intro"]
margin_left = 364.0
margin_right = 1112.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer" type="HSplitContainer" parent="."]
anchor_top = 0.72
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_right = -40.0
margin_bottom = -195.2
split_offset = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go" type="CheckBox" parent="HBoxContainer"]
margin_right = 172.0
margin_bottom = 51.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
pressed = true
group = SubResource( 3 )
text = "继续前进"

[node name="Rest" type="CheckBox" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 340.0
margin_bottom = 51.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
group = SubResource( 3 )
text = "睡一觉"

[node name="Confirm" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.852
margin_top = -100.0
margin_right = 98.1481
margin_bottom = -40.0
custom_fonts/font = ExtResource( 1 )
text = "确定"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="HBoxContainer/Go" to="." method="_on_Go_toggled"]
[connection signal="toggled" from="HBoxContainer/Rest" to="." method="_on_Rest_toggled"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
